feat: update CORS configuration to use allowed origins from a variable